--- a/public/templates/join.html
+++ b/public/templates/join.html
@@ -107,10 +107,8 @@
             <h6>About</h6>
         </div>
     </div>
-</div><footer>
-    <div class="Footer-div">
-        <p>Stay Connected! Follow us on social media.</p>
-    </div>
+</div>
+<footer>
     <div class="footer-holder">
         <div class="Image-Holder">
             <img src="/Logo/Frame%204.svg">
@@ -137,5 +135,8 @@
         </div>
     </div>
 </footer>
+<div class="Footer-div">
+    <p>Stay Connected! Follow us on social media.</p>
+</div>
 </body>
 </html>
