--- a/public/templates/newsletter.html
+++ b/public/templates/newsletter.html
@@ -58,11 +58,10 @@
         </div>
     </div>
 </div>
-
 <footer>
     <div class="footer-holder">
         <div class="Image-Holder">
-            <img src="/Logo/Frame%204.svg" alt="Nature for Future">
+            <img src="/Logo/Frame%204.svg">
         </div>
         <div class="Footer-text">
             <h3>Navigation Links</h3>
@@ -86,5 +85,8 @@
         </div>
     </div>
 </footer>
+<div class="Footer-div">
+    <p>Stay Connected! Follow us on social media.</p>
+</div>
 </body>
 </html>
