--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -173,6 +173,7 @@ border-radius: 2%;
     justify-content: center;
     padding: 6rem;
     background-color: var(--accent-clr);
+border-radius: 4%;
 }
 .Inner-Host a{
     display: flex;
@@ -353,10 +354,12 @@ input, #card-element {
         padding: 1rem;
         flex-direction: column;
         height: auto;
+border-radius: 2%;
     }
     .Inner {
         padding: 2rem;
         flex-direction: column;
+border-radius: 2%;
     }
     .wrapper{
         display: flex;
