--- a/public/templates/about.html
+++ b/public/templates/about.html
@@ -44,6 +44,11 @@
     <div class="Intro-holder">
         <div class="Intro-holder-inner">
             <h4>Suhas Koheda <br>23BAI1148 <br>suhas.koheda2023@vitstudent.ac.in <br>7396824087</h4>
+            <h4>A Video of how my Website works</h4>
+            <video width="320" height="240" controls>
+                <source src="/mp4/Recording%202024-07-07%20175554.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </div>
     </div>
 </div>
