--- a/public/templates/donation.html
+++ b/public/templates/donation.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-<div class="Main-Page">
+<div class="Main-Page" id="donation">
     <button class="Nav-bar-icon">
         <img src="https://img.icons8.com/?size=50&id=120374&format=png" alt="" class="Nav-bar-icon-image">
     </button>
