Community backend Django

--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -20,7 +20,7 @@
         <div class="Nav-bar">
             <div class="Nav-bar-content-holder"><a href="/templates/about.html" class="Nav-bar-content" >About</a></div>
             <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content" >Events</a></div>
-            <div  class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content" >Community Forums</a></div>
+            <div  class="Nav-bar-content-holder"><a href="localhost:8000" class="Nav-bar-content" >Community Forums</a></div>
             <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
         </div>
     </div>
