Added Backend Logic for Community and some changes

--- a/public/templates/Host.html
+++ b/public/templates/Host.html
@@ -18,7 +18,7 @@
         <a href="/templates/index.html"><img src="/Logo/Frame%203.svg" alt="Nature for Future" class="Home-Logo"></a>
         <div class="Nav-bar">
             <div class="Nav-bar-content-holder"><a href="/templates/about.html" class="Nav-bar-content" >About</a></div>
-            <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content" >Events</a></div>
+            <!-- <div class="Nav-bar-content-holder"><a href="/templates/events.html" class="Nav-bar-content" >Events</a></div> -->
             <div  class="Nav-bar-content-holder"><a href="/templates/commnity.html" class="Nav-bar-content" >Community Forums</a></div>
             <div class="Nav-bar-content-holder"><a href="/templates/donation.html" class="Nav-bar-content" >Donation Opportunities</a></div>
         </div>
@@ -58,8 +58,8 @@
         <div class="Footer-text">
             <h3>Navigation Links</h3>
             <h4><a href="/templates/about.html">About Us</a></h4>
-            <h4><a href="/templates/events.html">Events</a></h4>
-            <h4><a href="/templates/commnity.html">Community</a></h4>
+            <!-- <h4><a href="/templates/events.html">Events</a></h4> -->
+            <h4><a href="http://127.0.0.1:8000/">Community</a></h4>
             <h4><a href="/templates/donation.html">Donate Opportunities</a></h4>
         </div>
         <div class="Footer-text">
